# pulse

./: Cargo.toml  LICENSE  README.md  bacon.toml  clippy.toml  justfile
crates/pulse-app/: Cargo.toml
crates/pulse-app/src/: actions.rs  artwork_prefetch.rs  assets.rs  bundled_themes.rs  components.rs  config.rs  data.rs  error.rs  fonts.rs  icons.rs  library.rs  lyrics.rs  main.rs  media_controls.rs  player.rs  pulse.rs  theme_list.rs  views.rs
crates/pulse-app/src/components/: breadcrumb.rs  command_palette.rs  library_roots_dialog.rs  lyrics_panel.rs  lyrics_sidebar.rs  navigation.rs  pages.rs  player_bar.rs  pulse.rs  settings_dialog.rs  sidebar.rs  theme_picker_dialog.rs  toolbar.rs  ui.rs  visualizer_settings_dialog.rs
crates/pulse-app/src/components/pages/: album_viewer.rs  albums.rs  artist_viewer.rs  artists.rs  common.rs  grid.rs  lyrics.rs  mod.rs  visualizer.rs
crates/pulse-app/src/components/pulse/: icon.rs
crates/pulse-app/src/components/toolbar/: actions.rs  controls.rs  menubar.rs  menus.rs
crates/pulse-app/src/components/ui/: icon.rs  prelude.rs  stack.rs
crates/pulse-app/src/themes/: pulse_dark.json  pulse_light.json
crates/pulse-app/src/views/: pulse.rs  sidebar.rs
crates/pulse-assets/: Cargo.toml
crates/pulse-assets/src/: assets_macro.rs  fonts.rs  icons.rs  lib.rs
crates/pulse-audio/: Cargo.toml
crates/pulse-audio/src/: engine.rs  lib.rs  sample_capture.rs  sample_tap.rs  spectrum.rs
crates/pulse-data/: Cargo.toml
crates/pulse-data/src/: error.rs  keymap.rs  lib.rs  overrides.rs  paths.rs  settings.rs
crates/pulse-keymap/: Cargo.toml
crates/pulse-keymap/src/: action.rs  bindings.rs  keymap.rs  lib.rs  pulse.rs
crates/pulse-library/: Cargo.toml
crates/pulse-library/src/: config.rs  error.rs  lib.rs  library.rs  roots.rs  scan.rs  store.rs  watch.rs
crates/pulse-library/src/artwork/: cache.rs  extract.rs  ingest.rs  mod.rs  thumbnail.rs
crates/pulse-library/src/lyrics/: cache.rs  fetch.rs  load.rs  mod.rs  parse.rs
crates/pulse-model/: Cargo.toml
crates/pulse-model/src/: album.rs  artist.rs  artwork.rs  lib.rs  lyrics.rs  metadata.rs  song.rs
crates/pulse-runtime/: Cargo.toml
crates/pulse-runtime/src/: lib.rs
crates/pulse-theme/: Cargo.toml
crates/pulse-theme/src/: animation.rs  color.rs  lib.rs  radius.rs  spacing.rs  themes.rs  typography.rs
