[workspace]
resolver = "3"
members = ["crates/pulse-app", "crates/pulse-audio", "crates/pulse-library", "crates/pulse-model", "crates/pulse-theme"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
gpui = "*"
anyhow = "1"
thiserror = "2"
tracing = "0.1"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
unreachable = "deny"
unimplemented = "deny"
todo = "deny"
string_slice = "deny"
panic_in_result_fn = "deny"
panic = "deny"
exit = "deny"
as_conversions = "deny"
