[package]
name = "pulse-app"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
dirs = "6"
rfd = { version = "0.15", default-features = true }

tracing-subscriber = "0.3"

pulse-model = { path = "../pulse-model" }
pulse-data = { path = "../pulse-data" }
pulse-audio = { path = "../pulse-audio" }
pulse-library = { path = "../pulse-library" }
pulse-keymap = { path = "../pulse-keymap" }

[lints]
workspace = true
