[package]
name = "pulse-data"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse-keymap = { path = "../pulse-keymap" }
pulse-library = { path = "../pulse-library" }

dirs = "6"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
toml = "0.8"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
