[package]
name = "pulse-library"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse-model = { path = "../pulse-model" }

dirs = "6"
lofty = "0.22"
notify = "8.2"
notify-debouncer-mini = "0.6"
walkdir = "2"

serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
