[package]
name = "pulse-library"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse-model = { path = "../pulse-model" }

dirs = "6"
lofty = "0.22"
notify = "8.2"
notify-debouncer-mini = "0.6"
walkdir = "2"
blake3 = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }

serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
